update infos config

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Miroir Covid 19
+description: Ce site héberge une copie des informations du site du Ministère de l'Intérieur, si celui-ci est inaccessible.
