--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Miroir Covid 19
 description: Ce site héberge une copie des informations du site du Ministère de l'Intérieur, si celui-ci est inaccessible.
 show_downloads: true
 github:
-  pdf_url: https://github.com/leoboyerbx/covid-mirror/raw/master/Attestation_de_deplacement_derogatoire.pdf
+  zip_url: https://github.com/leoboyerbx/covid-mirror/raw/master/Attestation_de_deplacement_derogatoire.pdf
