--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@ theme: jekyll-theme-cayman
 title: Miroir Covid 19
 description: Ce site héberge une copie des informations du site du Ministère de l'Intérieur, si celui-ci est inaccessible.
 show_downloads: true
-github:
-  zip_url: https://github.com/leoboyerbx/covid-mirror/raw/master/Attestation_de_deplacement_derogatoire.pdf
+links:
+  - pdf:
+    text: Télécharger l'attestation de déplacement dérogatoire
+    url: https://github.com/leoboyerbx/covid-mirror/raw/master/Attestation_de_deplacement_derogatoire.pdf
